# GatorGuide

./: .codacy.yml  .env  .env.example  .gitattributes  .gitignore  .jshintrc  AGENTS.md  AUTH_SETUP.md  BUILD_IOS.md  Course-Planner-Updater.bat  Course-Planner-Updater.desktop  FIREBASE_SETUP.md  GoogleService-Info.plist  README.md  SUPPORT_ERROR_EMAIL_SETUP.md  Start-to-run.bat  Start-to-run.command  Start-to-run.desktop  Start-to-run.sh  TASK_PROPOSALS.md  add-or-remove-resources.bat  add-or-remove-resources.desktop  app.json  eas.json  env.example  google-services.json  package-lock.json  package.json  tailwind.config.js  tmp-english-pruned.txt  tmp-unused-translations.json
AI Team/model/: .env.example  .gitignore  AI.md  README.md  pyproject.toml  requirements.txt
AI Team/model/CourseMatching/: .env.example  README.md  __init__.py  demo.py  finetune_train.jsonl  gpt_matcher.py  human_feedback.jsonl  match_predictions.json  prepare_finetune_data.py  rlhf_matcher.py  run_finetune.py  school_data.json  validation_app.py
Data Team/: PIPELINE_OVERVIEW.md  README.md  pyproject.toml
Data Team/CrawlScoreBoard/: .gitignore  README.md  api_client.py  db_loader.py  main.py  schema.sql  transform.py
Data Team/DataScrape/: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  all_api_fields.csv  api_client.py  db_loader.py  field_of_study_api_fields.csv  main.py  transform.py
Data Team/Server/: .env.example  README.md
Data Team/Server/API/: admin.py  models.py  permissions.py  serializer.py  tests.py  (+5 more)
Data Team/docs/: PHASE7_IMPORT_NOTES.md
(+3632 files in other folders)
