[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "docs/PIPELINE_OVERVIEW.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.1",
    "django>=6.0.3",
    "django-admin-interface>=0.32.0",
    "django-colorfield>=0.14.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "markdown>=3.10.2",
    "mysqlclient>=2.2.8",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "sqlparse>=0.5.5",
    "text-unidecode>=1.3",
    "tzdata>=2025.3",
    "requests>=2.31.0",
    "mysql-connector-python>=8.2.0,!=9.6.0",
    "pandas>=3.0.0",
    "openpyxl>=3.1.5",
]
